[project]
name = "cswebdriver"
version = "1.0.0"
description = "A lightweight web API built with Bottle and selenium-stealth that provides endpoints to interact with web pages while bypassing common scraping detection techniques."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bottle>=0.13.4",
    "pydantic>=2.12.4",
    "selenium>=4.38.0",
    "selenium-stealth>=1.0.6",
    "structlog>=25.5.0",
]
